# productmanagement

./: .gitignore  alembic.ini  crud.py  db.py  main.py  models.py  pyproject.toml  pyvenv.cfg  requirements.txt  schemas.py  sql_app.db  test_db.db
alembic/versions/: 61171f4448b8_create_products_table.py  e73379f48f83_add_a_new_column.py
migrations/: env.py
migrations/versions/: 877ffda99f2c_initial.py
tests/: conftest.py  test_main.py
