[tool.poetry]
name = "productmanagement"
version = "0.1.0"
description = "product management using fastapi,sqlalchemy,alembic and poetry"
authors = ["anjusuru <anjusuru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
sqlalchemy = "^1.4.44"
alembic = "^1.8.1"
psycopg2 = "^2.9.5"
uvicorn = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start="app:main"
