[tool.poetry]
name = "productmanagement"
version = "0.1.0"
description = "product management using fastapi,sqlalchemy,alembic and poetry"
authors = ["anjusuru <anjusuru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
sqlalchemy = "^1.4.44"
alembic = "^1.8.1"
psycopg2 = "^2.9.5"
uvicorn = "^0.19.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
pylist = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"

[tool.black]
line_length = 90

[tool.isort]
# make it compatible with black
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start="app:main"
